[gd_scene load_steps=8 format=3 uid="uid://cf5i8la277xh3"]

[ext_resource type="Script" path="res://Code/Autoloads/ui.gd" id="1_jknin"]
[ext_resource type="Script" path="res://Code/Debug/debug_ui.gd" id="2_80re1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uh0nd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l5m8t"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.0554776, 0.0596172, 0.0782683, 0.647059)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.439049, 0.439049, 0.439049, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f1i8y"]
content_margin_left = 3.0
content_margin_top = 1.0
content_margin_right = 1.0
content_margin_bottom = 1.0
bg_color = Color(0.065795, 0.0612509, 0.0376051, 0.647059)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.439049, 0.439049, 0.439049, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mtq1m"]
content_margin_left = 3.0
content_margin_top = 1.0
content_margin_right = 1.0
content_margin_bottom = 1.0
bg_color = Color(0.065795, 0.0612509, 0.0376051, 0.647059)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.439049, 0.439049, 0.439049, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fo0di"]
bg_color = Color(0.6, 0.6, 0.6, 0.258824)

[node name="Ui" type="CanvasLayer"]
script = ExtResource("1_jknin")

[node name="Debug" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(432, 240)
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_uh0nd")
script = ExtResource("2_80re1")

[node name="debug_command_menu" type="VBoxContainer" parent="Debug"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="Debug/debug_command_menu"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_l5m8t")

[node name="output" type="RichTextLabel" parent="Debug/debug_command_menu/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/normal_font_size = 6
bbcode_enabled = true
scroll_following = true
shortcut_keys_enabled = false

[node name="input" type="LineEdit" parent="Debug/debug_command_menu"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 10)
layout_direction = 2
layout_mode = 2
focus_mode = 1
theme_override_font_sizes/font_size = 6
theme_override_styles/focus = SubResource("StyleBoxFlat_f1i8y")
theme_override_styles/normal = SubResource("StyleBoxFlat_mtq1m")
placeholder_text = "!commands for commands"
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false

[node name="display_debug_boxes" type="Control" parent="Debug"]
layout_mode = 2

[node name="state" type="RichTextLabel" parent="Debug/display_debug_boxes"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 10)
layout_mode = 2
offset_left = 24.0
offset_top = 24.0
offset_right = 108.0
offset_bottom = 32.0
theme_override_font_sizes/normal_font_size = 6
theme_override_styles/normal = SubResource("StyleBoxFlat_fo0di")
bbcode_enabled = true
text = "current state:"
scroll_active = false

[node name="axes" type="RichTextLabel" parent="Debug/display_debug_boxes"]
unique_name_in_owner = true
custom_minimum_size = Vector2(84, 20)
layout_mode = 2
offset_left = 24.0
offset_top = 40.0
offset_right = 108.0
offset_bottom = 60.0
theme_override_font_sizes/normal_font_size = 6
theme_override_styles/normal = SubResource("StyleBoxFlat_fo0di")
bbcode_enabled = true
text = "output_movement
"
scroll_active = false

[node name="output_movement" type="RichTextLabel" parent="Debug/display_debug_boxes"]
unique_name_in_owner = true
custom_minimum_size = Vector2(84, 20)
layout_mode = 2
offset_left = 24.0
offset_top = 67.0
offset_right = 108.0
offset_bottom = 87.0
theme_override_font_sizes/normal_font_size = 6
theme_override_styles/normal = SubResource("StyleBoxFlat_fo0di")
bbcode_enabled = true
text = "output_movement
"
scroll_active = false

[node name="jump" type="RichTextLabel" parent="Debug/display_debug_boxes"]
unique_name_in_owner = true
custom_minimum_size = Vector2(84, 10)
layout_mode = 0
offset_left = 24.0
offset_top = 94.0
offset_right = 108.0
offset_bottom = 104.0
theme_override_font_sizes/normal_font_size = 6
theme_override_styles/normal = SubResource("StyleBoxFlat_fo0di")
bbcode_enabled = true
text = "jump info"
scroll_active = false

[node name="jump2" type="RichTextLabel" parent="Debug/display_debug_boxes"]
unique_name_in_owner = true
custom_minimum_size = Vector2(84, 10)
layout_mode = 0
offset_left = 24.0
offset_top = 104.0
offset_right = 108.0
offset_bottom = 114.0
theme_override_font_sizes/normal_font_size = 6
theme_override_styles/normal = SubResource("StyleBoxFlat_fo0di")
bbcode_enabled = true
text = "jump info"
scroll_active = false

[node name="attacks" type="RichTextLabel" parent="Debug/display_debug_boxes"]
unique_name_in_owner = true
custom_minimum_size = Vector2(84, 10)
layout_mode = 0
offset_left = 24.0
offset_top = 120.0
offset_right = 108.0
offset_bottom = 130.0
theme_override_font_sizes/normal_font_size = 6
theme_override_styles/normal = SubResource("StyleBoxFlat_fo0di")
bbcode_enabled = true
text = "last attack:"
scroll_active = false
